@@ -1,5 +1,6 @@
 gometh <- function(sig.cpg, all.cpg=NULL, collection=c("GO","KEGG"), array.type = c("450K","EPIC"),
-                   plot.bias=FALSE, prior.prob=TRUE, anno=NULL, equiv.cpg = TRUE)
+                   plot.bias=FALSE, prior.prob=TRUE, anno=NULL, equiv.cpg = TRUE, 
+                   frac.count=TRUE)
   # Gene ontology testing or KEGG pathway analysis for Illumina methylation arrays based on goseq
   # Takes into account probability of differential methylation based on
   # numbers of probes on array per gene
@@ -13,7 +14,7 @@ gometh <- function(sig.cpg, all.cpg=NULL, collection=c("GO","KEGG"), array.type 
     go <- .getGO()
     result <- gsameth(sig.cpg=sig.cpg, all.cpg=all.cpg, collection=go$idList, 
                       array.type=array.type, plot.bias=plot.bias, prior.prob=prior.prob, 
-                      anno=anno, equiv.cpg=equiv.cpg)
+                      anno=anno, equiv.cpg=equiv.cpg, frac.count=frac.count)
     result <- merge(go$idTable,result,by.x="GOID",by.y="row.names")
     rownames(result) <- result$GOID
 
@@ -21,7 +22,7 @@ gometh <- function(sig.cpg, all.cpg=NULL, collection=c("GO","KEGG"), array.type 
     kegg <- .getKEGG()
     result <- gsameth(sig.cpg=sig.cpg, all.cpg=all.cpg, collection=kegg$idList, 
                       array.type=array.type, plot.bias=plot.bias, prior.prob=prior.prob, 
-                      anno=anno, equiv.cpg=equiv.cpg)
+                      anno=anno, equiv.cpg=equiv.cpg, frac.count=frac.count)
     result <- merge(kegg$idTable,result,by.x="PathwayID",by.y="row.names")
     rownames(result) <- result$PathwayID
   }
